# finalproject_tkachenko_m25_555

./: .gitignore  Makefile  README.md  demo.cast  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
data/data/: portfolios.json  rates.json
valutatrade_hub/: __init__.py  decorators.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: __init__.py  currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
