[tool.poetry]
name = "finalproject-tkachenko-m25-555"
version = "0.1.0"
description = "ValutaTrade Hub - Trading platform for fiat and crypto currencies"
authors = ["Sonya Tkachenko <sonyatkachenko2003@mail.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
python-dateutil = "^2.8.0"
schedule = "^1.2.0"
python-dotenv = "^1.2.1"
black = "^25.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
flake8 = "^3.9"

[tool.poetry.scripts]
valutatrade = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = [
    "F841",
]
